--- a/2style.css
+++ b/2style.css
@@ -20,6 +20,7 @@ header h1{
     padding: 10px;
 }
 header p {
+    padding-bottom: 10px;
     font-weight: bold;
     text-align: center;
     font-size: 0.8em;
